Fix codestyle violations, refactor tests.